--- a/hobbies.html
+++ b/hobbies.html
@@ -2,7 +2,7 @@
 <html lang="en" class="hobbybackground">
 <meta charset="UTF-8">
 <head>
-    <title>Charles Pingry</title>
+    <title>Charles Pingry Hobbies</title>
     <meta name="viewport" content="width-device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheet.css"> 
 </head>    
