--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="mainbackground">
 <meta charset="UTF-8">
 <head>
-    <title>Charles Pingry</title>
+    <title>Charles Pingry Main</title>
     <meta name="viewport" content="width-device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheet.css"> 
 </head>    
@@ -10,17 +10,38 @@
         <header>
         <h1 class="mainh1">Charles Pingry's Website</h1>
         </header>
-        <nav>
+        <nav class="mainnav">
             <ul>
-            <li><a href="/tvshow.html">Favorite TV Show</a></li> |
-            <li><a href="/hobbies.html">Favorite Hobbies</a></li> |
-            <li><a href="/travel.html">Favorite Travel Destination</a></li>
+            <li><a class="mainnav" href="/tvshow.html">Favorite TV Show</a></li> |
+            <li><a class="mainnav" href="/hobbies.html">Favorite Hobbies</a></li> |
+            <li><a class="mainnav" href="/travel.html">Favorite Travel Destination</a></li>
             </ul>
         </nav>
+        <h2 class="mainh2">About Me</h2>
+        <p class="mainp1">I am a 22 year old college student attending my final year at the
+             University of Wisconsin-Madison with a major in Personal Finance 
+             and a minor in Entrepreneurship.  I am from La Crescenta, CA which
+            is a small town not too far from downtown Los Angeles. I love lots of
+            things such as traveling, technology, and media in general. If you want
+            to learn more about my passions you can visit the other pages above to learn
+            all there is to know about me!</p>
+        <div class="maindiv">
+        <h3>Fun Facts</h3>
+        <ul class="funfacts">
+            <li class="funfacts">I have a fraternal twin brother and we were born 8 minutes
+                apart (you can see a picture of us on the travel page)</li>
+            <li class="funfacts">I ran cross county and track in high school, and attended 
+                the 2017 CA Cross Country State Invitational</li>
+            <li class="funfacts">I am an Eagle Scout, and was a part of the Boy Scouts of America for 10+ years</li>
+            <li class="funfacts">Over break my family got a new puppy named Harbert, a miniature dachshund</li>
+        </ul>
+        </div>
         
-         <h2 class="mainh2">All About Me</h2>
-         <p>I am a 22-year old college student attending my final year at the
-             University of Wisconsin-Madison with a major in Personal Finance and a minor in Entrepreneurship.</p>
+        <h4>A Couple Photos</h4>
+        <img class="mainpics" src="charlesxc.PNG" width= 280px height= 450px alt="Charles in XC Race">
+        <figcaption>Me during a big cross country race</figcaption>
+        <img class="mainpics" src="jumpsign.PNG" width=400px height=280px alt="Jumping in Front of a Sign">
+        <figcaption>Me, my cousin (left) and roommate Eric (right) over Thanksgiving</figcaption>
         </body>
         </html>
         
