--- a/travel.html
+++ b/travel.html
@@ -2,13 +2,13 @@
 <html lang="en" class="travelstyle">
 <meta charset="UTF-8">
 <head>
-    <title>Charles Pingry</title>
+    <title>Charles Pingry Travel</title>
     <meta name="viewport" content="width-device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheet.css"> 
 </head>    
     <body>    
         <header>
-        <h1>My Favorite Travel Destination: Paris</h1>
+        <h1 class="travelh1">My Favorite Travel Destination: Paris</h1>
         </header>
         <nav>
             <ul>
