--- a/tvshow.html
+++ b/tvshow.html
@@ -1,29 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="tvbackground">
 <meta charset="UTF-8">
 <head>
-    <title>Favorite TV Show</title>
+    <title>Charles Pingry TV</title>
     <meta name="viewport" content="width-device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheet.css"> 
 </head>    
     <body>    
         <header>
-        <h1>Favorite TV Show: OZARK</h1>
+        <h1 class="tvh1">Favorite TV Show: OZARK</h1>
         </header>
-        <nav>
+        <nav class="tvnav">
             <ul>
-            <li><a href="/index.html">Main Page</a></li> |
-            <li><a href="/hobbies.html">Favorite Hobbies</a></li> |
-            <li><a href="/travel.html">Favorite Travel Destination</a></li>
+            <li><a class="tvnav" href="/index.html">Main Page</a></li> |
+            <li><a class="tvnav" href="/hobbies.html">Favorite Hobbies</a></li> |
+            <li><a class="tvnav" href="/travel.html">Favorite Travel Destination</a></li>
             </ul>
         </nav>
-        
-         <h2>Synopsis</h2>
-         <p> The show follows Marty Byrd, a financial advisor from Chicago who has been laundering
+        <div class="row">
+            <div class="column">
+            <h2>Synopsis</h2>
+            <p> The show follows Marty Byrd, a financial advisor from Chicago who has been laundering
              money for one of the largest Mexican drug cartels for years. His reality comes crashing
-             down when it is discovered that his partner siphones and stole from them. In order to stay alive, Marty agrees to move his family out to the Lake of the Ozarks
-             in Missouri to continue laundering money to repay what his partner stole.
-         </p>
+             down when it is discovered that his partner had been siphoning money from their operation. 
+             In order to stay alive, Marty agrees to move his family out to the Lake of the Ozarks
+             in Missouri to continue laundering money to repay what his partner stole.</p>
+            </div>
+        <div class="column">
+        <h3>My Favorite Aspects</h3>
+        <ul>
+            <li>At the beginning of each episode, an O is displayed on the screen and divided into 4 corners, 
+                each containing an object or scene.  Viewers can find each of these things throughout the episodeas they watch.</li>
+            <li>The acting is done very well, but the character development from the start to current season for some of them is 
+                amazing as you learn more about the story.</li>
+        </ul>
+        </div>
+        </div>
         </body>
         </html>
         
