this should work

--- a/hobbies.html
+++ b/hobbies.html
@@ -1,26 +1,50 @@
 <!DOCTYPE html>
-<html lang="en" class="hobbybackground">
+<html lang="en" class="hobbymain">
 <meta charset="UTF-8">
-<head>
     <title>Charles Pingry Hobbies</title>
     <meta name="viewport" content="width-device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheet.css"> 
-</head>    
-    <body>    
+<body>    
         <header>
-        <h1 class="hobbyh1">Charles Pingry's Website</h1>
+        <h1 class="hobbyh1">Charles Pingry's Hobbies</h1>
         </header>
-        <nav>
+        <nav class="hobbynav">
             <ul>
-            <li><a href="/index.html">Main Page</a></li> |
-            <li><a href="/tvshow.html">Favorite TV Show</a></li> |
-            <li><a href="/travel.html">Favorite Travel Destination</a></li>
+            <li><a class="hobbynav" href="/index.html">Main Page</a></li>
+            <li><a class="hobbynav">   |   </a></li>
+            <li><a class="hobbynav" href="/tvshow.html">Favorite TV Show</a></li>
+            <li><a class="hobbynav">   |   </a></li>
+            <li><a class="hobbynav" href="/travel.html">Favorite Travel Destination</a></li>
             </ul>
         </nav>
-        
-         <h2>All About Me</h2>
-         <p>I am a 22-year old college student attending my final year at the
-             University of Wisconsin-Madison with a major in Personal Finance and a minor in Entrepreneurship.</p>
-        </body>
-        </html>
+        <section>
+         <h2 class="hobbyh2">My Favorite Things to Do</h2>
+         <dl>
+            <dt>Video Games</dt>
+            <dd>I play many different types of games with my friends using a trusty
+                 game laptop I got for graduating high school. My favorite games include
+                 <a href="https://en.bandainamcoent.eu/elden-ring/elden-ring">Elden Ring</a>
+                 (this game is so cool, link included), Valorant, most Legend of Zelda titles, 
+                 and Destiny 2.
+            </dd>
+            <dt>Physical Activity</dt>
+            <dd>I enjoy most forms of physical activity and my habits have changed over the 
+                 years.  Up through high school I played sports such as tennis, track/running,
+                baseball, and even lacrosse for a bit.  Now I typically go to the gym around 5 days 
+                per week with friends or my roommates.</dd>
+            <dt>Traveling</dt>
+            <dd>This is more of a passion than a hobby, but I really enjoy travel and seeing new
+                new places when I am given the opportunity. Living among new cultures is probably one 
+                of the most exciting parts of life for me. I have been to Mexico, Canada, Europe, and South
+                Korea and hope to expand the list soon.
+            </dd>
+         </dl>
+         </section>
+         <figure>
+         <img class="hobbypics" src="computerdesk.jpg" width=600 height=400 alt="my home PC">
+         <figcaption>This my desk in my apartment where I play games! I bought all the extra items over 
+                     time but plan to get a full desktop soon.</figcaption>
+        </figure>
+</body>
+</html>
         
