--- a/travel.html
+++ b/travel.html
@@ -1,26 +1,53 @@
 <!DOCTYPE html>
 <html lang="en" class="travelstyle">
 <meta charset="UTF-8">
-<head>
     <title>Charles Pingry Travel</title>
     <meta name="viewport" content="width-device-width, initial-scale=1">
-    <link rel="stylesheet" href="stylesheet.css"> 
-</head>    
+    <link rel="stylesheet" href="stylesheet.css">    
     <body>    
         <header>
         <h1 class="travelh1">My Favorite Travel Destination: Paris</h1>
         </header>
-        <nav>
+        <nav class="travelnav">
             <ul>
-            <li><a href="/index.html">Main Page</a></li> |
-            <li><a href="/hobbies.html">Favorite Hobbies</a></li> |
-            <li><a href="/travel.html">Favorite TV Show</a></li>
+            <li><a class="travelnav" href="/index.html">Main Page</a></li>
+            <li><a class="travelnav">   |   </a></li>
+            <li><a class="travelnav" href="/hobbies.html">Favorite Hobbies</a></li>
+            <li><a class="travelnav">   |   </a></li>
+            <li><a class="travelnav" href="/tvshow.html">Favorite TV Show</a></li>
             </ul>
         </nav>
-        
-         <h2>All About Me</h2>
-         <p>I am a 22-year old college student attending my final year at the
-             University of Wisconsin-Madison with a major in Personal Finance and a minor in Entrepreneurship.</p>
+
+        <div class="travelh2">
+        <h2>Trip Description and my Experience</h2>
+        <p>My family took a trip to Europe in the spring of 2012 when I was in 6th grade. 
+             We spent about 7-9 days between England and Paris and it was a great time. I was young
+             but the different cultures were so unique and seeing some of the world's most famous
+             monuments, art, and architecture is something I will remember forever.  This trip was
+             most likely the one that really created my passion for traveling and experiencing
+             new cultures.  Although I have been limited in my ability to fly expecially with the 
+             COVID-19 pandemic, there are still many places I want to see in the next few years.
+        </p>
+        </div>
+
+        <div class="travelh3">
+        <h3>The Best Parts</h3>
+        <p> I absolutely loved the food in Paris and every restaurant we went to was amazing.  The 
+            people-watching was another great part for me especially in the quieter parts. I am so glad 
+            that I was able to see Notre Dame before the fire, I feel very lucky. The art in the Louvre
+            is an experience I can still picture in my head.</p>
+        </div>
+        <div class="travelh4">
+        <h4>The Bad Parts</h4>
+        <p> I loved this trip and everything about it, but I think I was still too young at the 
+            time to truly appreciate it and learn. I don't remember some parts of it and I just
+            believe it did not impact me as much as a trip today would. Another thing is that French
+            people hate Americans so sometimes we were treated poorly because of our lack of language 
+            skills, etc. Another downside for me was not seeing Mont-Saint Michel which is one of the 
+            coolest places ever and I will go back to see it someday.
+        </p>
+        </div>
+        <img class="travelpics" src="c&a.PNG" width=250 height=300 alt="Charles & Andrew on Trip">
         </body>
         </html>
         
