--- a/tvshow.html
+++ b/tvshow.html
@@ -1,40 +1,68 @@
 <!DOCTYPE html>
 <html lang="en" class="tvbackground">
 <meta charset="UTF-8">
-<head>
     <title>Charles Pingry TV</title>
     <meta name="viewport" content="width-device-width, initial-scale=1">
-    <link rel="stylesheet" href="stylesheet.css"> 
-</head>    
+    <link rel="stylesheet" href="stylesheet.css">     
     <body>    
         <header>
         <h1 class="tvh1">Favorite TV Show: OZARK</h1>
         </header>
         <nav class="tvnav">
             <ul>
-            <li><a class="tvnav" href="/index.html">Main Page</a></li> |
-            <li><a class="tvnav" href="/hobbies.html">Favorite Hobbies</a></li> |
+            <li><a class="tvnav" href="/index.html">Main Page</a></li>
+            <li><a class="tvnav">   |   </a></li>
+            <li><a class="tvnav" href="/hobbies.html">Favorite Hobbies</a></li>
+            <li><a class="tvnav">   |   </a></li>
             <li><a class="tvnav" href="/travel.html">Favorite Travel Destination</a></li>
             </ul>
         </nav>
         <div class="row">
             <div class="column">
-            <h2>Synopsis</h2>
-            <p> The show follows Marty Byrd, a financial advisor from Chicago who has been laundering
-             money for one of the largest Mexican drug cartels for years. His reality comes crashing
-             down when it is discovered that his partner had been siphoning money from their operation. 
-             In order to stay alive, Marty agrees to move his family out to the Lake of the Ozarks
-             in Missouri to continue laundering money to repay what his partner stole.</p>
+            <h2>Brief Synopsis</h2>
+            <p class="synop"> The Netflix show follows Marty Byrd, a financial advisor from Chicago who has been laundering
+            money for one of the largest Mexican drug cartels for years. His reality comes crashing
+            down when it is discovered that his partner had been siphoning money from their operation. 
+            In order to stay alive, Marty agrees to move his family out to the Lake of the Ozarks
+            in Missouri to continue laundering money to repay what his partner stole. Marty must keep his family safe
+            while also covering up their reason for moving.</p>
+            <p class="reason">I began watching the show in September 2020 right as the Fall semester had started. One of my
+            roommates wanted me to watch it and said he would watch it again with me, so we started it. I quickly became 
+            a little bit too engrossed and we watched all 3 seasons that were out at the time really fast.  I actually
+            tested positive for COVID-19 because he unknowingly had it and gave it to me, so we watched while quarantining too!
+            I recently watched the first half of season 4 that just released in January.</p>
+            <h2>Reason for Watching/Timeline</h2>
             </div>
         <div class="column">
-        <h3>My Favorite Aspects</h3>
-        <ul>
-            <li>At the beginning of each episode, an O is displayed on the screen and divided into 4 corners, 
-                each containing an object or scene.  Viewers can find each of these things throughout the episodeas they watch.</li>
-            <li>The acting is done very well, but the character development from the start to current season for some of them is 
-                amazing as you learn more about the story.</li>
+        <h2>My Favorite Aspects</h2>
+        <ul class="tvpros">
+            <li class="tvpros">At the beginning of each episode, an O is displayed on the screen and divided into 4 corners, 
+                each containing an object or scene that viewers can find throughout as they watch</li>
+            <li class="tvpros">The acting is done very well, but the character development from the start to current season for some of them is 
+                amazing as you learn more about the story</li>
+            <li class="tvpros">My favorite character is Buddy, an old man that agrees to rent his house out to the Byrd family when they
+                move to Missouri</li>
         </ul>
+        <dl class="tvrate">
+            <dt class="tvrate">My Rating: 4.8/5</dt>
+                <dd class="tvrate">The show combines some very interesting lifestyles and brings together the modern business city-life with the
+                    rugged callused down-and-dirty in the form of a thrilling drama. You are kept on your toes all throughout as events play 
+                    out quickly and take unlikely turns often.  This being said, at moments I do feel like some of the acting can be a bit almost
+                    over-the-top, particularly Wendy (Marty's wife). Despite this the story is moving in a great direction currenly and I recommend
+                    watching if you have not.
+                </dd>
+        </dl>
+        <h2>My Overall Rating/Thoughts</h2>
         </div>
+        </div>
+
+        <div class="inspo">
+            <h3 class="tvh3">Inspiration for Page Layout</h3>
+        <figure>
+            <img class="ozarksym" src="ozark-symbols.webp" width= 400 height= 300 alt="Ozark Opening Symbols">
+            <figcaption>Image: Ozark Symbols by Netflix from Ozark produced by Batemen, Jason, Chris Mundy, Bill Dubuque, & Mark Williams.
+            Taken from: https://decider.com/2017/08/18/netflix-meaning-behind-ozark-symbols/. Published: August 17, 2018</figcaption>
+        </figure>
         </div>
         </body>
         </html>
