--- a/hobbies.html
+++ b/hobbies.html
@@ -10,11 +10,11 @@
         </header>
         <nav class="hobbynav">
             <ul>
-            <li><a class="hobbynav" href="/index.html">Main Page</a></li>
+            <li><a class="hobbynav" href="/lis351-cpingry.github.io/index.html">Main Page</a></li>
             <li><a class="hobbynav">   |   </a></li>
-            <li><a class="hobbynav" href="/tvshow.html">Favorite TV Show</a></li>
+            <li><a class="hobbynav" href="/lis351-cpingry.github.io/tvshow.html">Favorite TV Show</a></li>
             <li><a class="hobbynav">   |   </a></li>
-            <li><a class="hobbynav" href="/travel.html">Favorite Travel Destination</a></li>
+            <li><a class="hobbynav" href="/lis351-cpingry.github.io/travel.html">Favorite Travel Destination</a></li>
             </ul>
         </nav>
         <section>
