--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         </header>
         <nav class="hobbynav">
             <ul>
-                <li><a class="mainnav" href="/tvshow.html">Favorite TV Show</a></li>
+                <li><a class="mainnav" href="/lis351-cpingry.github.io/tvshow.html">Favorite TV Show</a></li>
                 <li><a class="mainnav">   |   </a></li>
-                <li><a class="mainnav" href="/hobbies.html">Favorite Hobbies</a></li>
+                <li><a class="mainnav" href="/lis351-cpingry.github.io/hobbies.html">Favorite Hobbies</a></li>
                 <li><a class="mainnav">   |   </a></li>
-                <li><a class="mainnav" href="/travel.html">Favorite Travel Destination</a></li>
+                <li><a class="mainnav" href="/lis351-cpingry.github.io/travel.html">Favorite Travel Destination</a></li>
             </ul>
         </nav>
         <h2 class="mainh2">About Me</h2>
