--- a/travel.html
+++ b/travel.html
@@ -10,11 +10,11 @@
         </header>
         <nav class="travelnav">
             <ul>
-            <li><a class="travelnav" href="/index.html">Main Page</a></li>
+            <li><a class="travelnav" href="/lis351-cpingry.github.io/index.html">Main Page</a></li>
             <li><a class="travelnav">   |   </a></li>
-            <li><a class="travelnav" href="/hobbies.html">Favorite Hobbies</a></li>
+            <li><a class="travelnav" href="/lis351-cpingry.github.io/hobbies.html">Favorite Hobbies</a></li>
             <li><a class="travelnav">   |   </a></li>
-            <li><a class="travelnav" href="/tvshow.html">Favorite TV Show</a></li>
+            <li><a class="travelnav" href="/lis351-cpingry.github.io/tvshow.html">Favorite TV Show</a></li>
             </ul>
         </nav>
 
