--- a/tvshow.html
+++ b/tvshow.html
@@ -10,11 +10,11 @@
         </header>
         <nav class="tvnav">
             <ul>
-            <li><a class="tvnav" href="/index.html">Main Page</a></li>
+            <li><a class="tvnav" href="/lis351-cpingry.github.io/index.html">Main Page</a></li>
             <li><a class="tvnav">   |   </a></li>
-            <li><a class="tvnav" href="/hobbies.html">Favorite Hobbies</a></li>
+            <li><a class="tvnav" href="/lis351-cpingry.github.io/hobbies.html">Favorite Hobbies</a></li>
             <li><a class="tvnav">   |   </a></li>
-            <li><a class="tvnav" href="/travel.html">Favorite Travel Destination</a></li>
+            <li><a class="tvnav" href="/lis351-cpingry.github.io/travel.html">Favorite Travel Destination</a></li>
             </ul>
         </nav>
         <div class="row">
